# lv8_port_esp32

./: .gitmodules  CMakeLists.txt  Makefile  README.md  sdkconfig
components/lv_examples/: CMakeLists.txt  Kconfig  component.mk  lv_demo_conf.h
components/lv_examples/assets/: img_cogwheel_alpha16.c  img_cogwheel_argb.c  img_cogwheel_chroma_keyed.c  img_cogwheel_indexed16.c  img_cogwheel_rgb.c  img_hand.c
main/: CMakeLists.txt  main.c
